<resources>
    <string name="app_name">Biology Quiz Application</string>
    <string name="sample_question">question will be here!!</string>
    <string name="next">Next</string>
    <string name="score_placeholder">Score: 0</string>
    <string name="answer_placeholder">Answer</string>
    <string name="percent_placeholder">0 / 10</string>
    <string name="streak_placeholder">Streak: 0</string>
    <string name="your_score">Your Score</string>
    <string name="score_points_placeholder">140PT</string>
    <string name="start_new_game">Start New Game!</string>
    <string name="this_will_be_a_question">quetion will be here\n</string>
    <string name="you_scour_is">your scour is :</string>
</resources>